--- a/P004227.opf/layers/v001/Pagination.yml
+++ b/P004227.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: de46fa868eeb4a1bbd3cb06c151452d8
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   0b2ae4c6ef2049a4b45c5db3ec205a65:
